--- a/my_retinanet.yaml
+++ b/my_retinanet.yaml
@@ -18,20 +18,20 @@ task:
       norm_momentum: 0.99
       use_sync_bn: true
   train_data:
-    tfds_data_dir: '/home/cam2tf_tutorials/tensorflow_datasets'
+    tfds_data_dir: '~/tensorflow_datasets'
     tfds_name: 'coco'
     tfds_split: 'train'
     drop_remainder: true
-    dtype: float32
+    dtype: float16
     global_batch_size: 8
     input_path: ''
     is_training: true
   validation_data:
-    tfds_data_dir: '/home/cam2tf_tutorials/tensorflow_datasets'
+    tfds_data_dir: '~/tensorflow_datasets'
     tfds_name: 'coco'
     tfds_split: 'validation'
     drop_remainder: true
-    dtype: float32
+    dtype: float16
     global_batch_size: 8
     input_path: ''
     is_training: false
