--- a/my_retinanet_eight_gpus.yaml
+++ b/my_retinanet_eight_gpus.yaml
@@ -18,6 +18,7 @@ task:
       norm_momentum: 0.99
       use_sync_bn: true
   train_data:
+    tfds_data_dir:
     tfds_name: 'coco'
     tfds_split: 'train'
     drop_remainder: true
@@ -26,6 +27,7 @@ task:
     input_path: ''
     is_training: true
   validation_data:
+    tfds_data_dir:
     tfds_name: 'coco'
     tfds_split: 'validation'
     drop_remainder: true
